# open-suite-portal

./: compose.yaml
.github/workflows/: backend-ci.yaml  frontend-ci.yaml  general-ci.yaml  publish-images.yaml
backend/: pyproject.toml
backend/app/: token_exchange.py
backend/app/clients/: caldav.py
backend/app/routes/: caldav.py
backend/tests/clients/: test_caldav.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/messages/: en.json  nl.json
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/app/Common/: CustomList.jsx  Loading.jsx  Widget.jsx  pageConfig.jsx
frontend/src/app/Common/CustomHooks/: useAutoRefresh.jsx  useFetchWithRefresh.jsx
frontend/src/app/Components/AppWidgets/Calendar/: Calendar.jsx
frontend/src/app/Components/AppWidgets/Chat/: Chat.jsx
frontend/src/app/Components/AppWidgets/Meet/: Meet.jsx
frontend/src/app/Components/Context/: AppContext.jsx
frontend/src/lib/: silentLogin.js
